# su2024_digital_futures

./: README.md  reference.txt
computervision/line_detection/: line_detection.py  line_follower.py  line_navigation.py
computervision/opencv_learn/: defineColor.py  hsv_finder.py  reference.md  region_of_interest.py  video_input.py
gazebosim/world/: tutorial  (+1 more)
kalman_filter/: script.py
odot_test/: drawbar_pull.md  other_ideas.md  robot_tests_for_odot.md  slope_climb.md  tiptest.md
path_planning/: README.md
pid_controller/: README.md  pid.cpp  pid.py
road_lane_detection/: README.md  advanced.py  camera_specs.txt  contour_method.py  hough.py  log  misc.py  tracker.py
ros2-line-follower/src/line_navigation/: README.md  package.xml  setup.cfg  setup.py
ros2-line-follower/src/line_navigation/launch/: new_track.launch.py
ros2-line-follower/src/line_navigation/line_navigation/: line_follower.py  line_follower_display.py  misc.py  obstacle_avoidance.py  processing.py  wandering_random_color.py
ros2-line-follower/src/line_navigation/models/camburger/: model.config  model.sdf
ros2-line-follower/src/line_navigation/models/image_floor/materials/scripts/: image_floor.material
ros2-line-follower/src/line_navigation/models/track_2/: model.config  model.sdf
ros2-line-follower/src/line_navigation/models/track_2/materials/scripts/: image_floor.material
ros2-line-follower/src/line_navigation/worlds/: new_track.world
ros2-line-follower/src/roadlane/: README.md  package.xml  setup.cfg  setup.py
ros2-line-follower/src/roadlane/models/camburger/: model.sdf
ros2-line-follower/src/roadlane/models/sim_lane_1/: model.config
ros2-line-follower/src/roadlane/models/sim_lane_1/materials/scripts/: image_floor.material
ros2-line-follower/src/roadlane/models/sim_lane_2/: model.config  model.sdf
ros2-line-follower/src/roadlane/models/sim_lane_2/materials/scripts/: image_floor.material
ros2-line-follower/src/roadlane/roadlane/: advanced.py  hough.py  lane_detection_beta.py  tracker.py
slam_depth_est/: README.md
(+52 files in other folders)
