<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roadlane</name>
  <version>0.0.0</version>
  <description>ROS2 package for road lane detection and keeping the model in the lane</description>
  <maintainer email="voht@mail.uc.edu">hung vo</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>pandas</depend>
  <depend>cv2</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
